@@ -6,6 +6,7 @@ AV2 Changelog :: version a4.2
 * Regen chi on sleep
 * Fire arc does additional damage & push on hit
 * Floating block boomerang requires additional chi
+* Creative mode allows bypass locked abilities
 
 > Fix penguin, firebender, and airbender name tags being shown
 > Fix cracked account issues - gen fake account UUID based on username
